welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:1: error: '(' expected but identifier found.
def lastDigit(a:Int, b:Int):Boolean = {while a>9 {a=a%10}
                                             ^lastDigit:2: error: '(' expected but identifier found.
                                       while b>9 {b=b%10}
                                             ^